<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/containerToolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Blue"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:subtitleTextColor="@color/white"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerCandidateCardLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerToolbarMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/nameTV_Hint"
                android:textColor="@color/Blue"
                android:textColorHint="#78909C"
                android:textSize="@dimen/name_surname_TextSize"></EditText>

            <EditText
                android:id="@+id/surnameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/surnameTV_Hint"
                android:textColor="@color/Blue"
                android:textColorHint="#78909C"
                android:textSize="@dimen/name_surname_TextSize"></EditText>

            <EditText
                android:id="@+id/ageET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/ageTV_Hint"
                android:inputType="number"
                android:textColor="@color/Blue"
                android:textColorHint="#78909C"
                android:textSize="@dimen/age_post_TextSize"></EditText>

            <Spinner
                android:id="@+id/postSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/minHeight"
                android:textColor="@color/Blue"
                android:textSize="@dimen/age_post_TextSize"></Spinner>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSaveButtonLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/containerListViewLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerCandidateCardLL">

        <Button
            android:id="@+id/saveBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Blue"
            android:text="@string/saveBT_Text"
            android:textColor="@color/white"
            android:textSize="@dimen/button_TextSize"></Button>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/containerListViewLL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerSaveButtonLL">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPostMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Blue">

                <Spinner
                    android:id="@+id/postListSP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_Top_Main"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/minHeight"
                    android:textSize="@dimen/age_post_TextSize"></Spinner>

            </androidx.appcompat.widget.Toolbar>

            <ListView
                android:id="@+id/listPersonLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>